--- a/ExploreStates.html
+++ b/ExploreStates.html
@@ -201,16 +201,13 @@
         </ul>
     </nav>
 </div>
-      <section class="hero">
-  
-
-    
-    <h2>UNESCO World Heritage Sites in India</h2>
-    <p>Explore all majestic heritage sites across India</p>
+<section class="hero">
+    <h2>States in India</h2>
+    <p>Explore all beautiful States across India</p>
     <div class=" -box">
       <input type="text" id=" " placeholder="Search for your desired heritage site...">
     </div>
-  </section>
+</section>
 
   <section class<div class="cards-section" id="heritage-cards"></section>
 
@@ -220,13 +217,13 @@
 
   <script>
     const data = [
-      { name: "Taj Mahal",state: "Uttar Pradesh",city: "Agra", img: "Images/TajMahal.jpg", info: "An iconic white marble mausoleum symbolizing eternal love, admired for its stunning Mughal architecture and symmetry.", link: "tajmahal.html" },
-      { name: "Khangchendzonga National Park",state: "sikkim", city: "Sikkim", img:"Images/KhangchendzongaNationalPark.jpg", info: "A pristine Himalayan wilderness in Sikkim, home to glaciers, forests, and the majestic Mount Khangchendzonga.", link: "Khangchendzonga .html" },
-      { name: "Konark Sun Temple",state: "Odisha", city: "Konark", img: "Images/KonarSunTemple.jpeg", info: "A majestic 13th-century chariot-shaped temple dedicated to the Sun God, showcasing the zenith of ancient Odishan architecture and craftsmanship.", link: "konark.html" },
-      { name: "Qutub Minar",state: "Delhi", city: "Mehrauli", img: "Images/Qutub_Minar.jpg", info: "A towering symbol of Indo-Islamic heritage, this 12th-century minaret stands as a remarkable testament to Delhi’s medieval glory.", link: "qutubminar.html" },
-      { name: "Red Fort",state: "Delhi", city: "Chandni Chauk", img: "Images/Delhi_Red_fort.jpg", info: "An architectural marvel of red sandstone, the Red Fort served as the grand residence of Mughal emperors and remains a powerful emblem of India's sovereignty.", link: "redfort.html" },
-      { name: "Ellora Caves",state: "Maharashtra", city: "Aurangabad", img: "Images/Ellora caves.jpg", info: "A spectacular complex of rock-cut temples and monasteries, Ellora showcases the harmonious coexistence of Hindu, Buddhist, and Jain heritage in ancient India.", link: "ellora.html" },
-      { name: "Ajanta Caves",state: "Maharashtra", city: "Aurangabad", img: "Images/ajanta-caves-.jpg", info: "Renowned for their exquisite ancient murals and Buddhist rock-cut architecture, the Ajanta Caves reflect the spiritual and artistic brilliance of ancient India.", link: "ajanta.html" }
+      { name: "Maharashtra",state: "Maharashtra",city: "", info: "A land of Maratha valor, vibrant culture, and natural beauty.", link: "Maharashtra.html" },
+      { name: "Khangchendzonga National Park",state: "sikkim", city: "Sikkim", img:"", info: "A pristine Himalayan wilderness in Sikkim, home to glaciers, forests, and the majestic Mount Khangchendzonga.", link: "Khangchendzonga .html" },
+      { name: "Konark Sun Temple",state: "Odisha", city: "Konark", img: "", info: "A majestic 13th-century chariot-shaped temple dedicated to the Sun God, showcasing the zenith of ancient Odishan architecture and craftsmanship.", link: "konark.html" },
+      { name: "Qutub Minar",state: "Delhi", city: "Mehrauli", img: "", info: "A towering symbol of Indo-Islamic heritage, this 12th-century minaret stands as a remarkable testament to Delhi’s medieval glory.", link: "qutubminar.html" },
+      { name: "Red Fort",state: "Delhi", city: "Chandni Chauk", img: "", info: "An architectural marvel of red sandstone, the Red Fort served as the grand residence of Mughal emperors and remains a powerful emblem of India's sovereignty.", link: "redfort.html" },
+      { name: "Ellora Caves",state: "Maharashtra", city: "Aurangabad", img: "", info: "A spectacular complex of rock-cut temples and monasteries, Ellora showcases the harmonious coexistence of Hindu, Buddhist, and Jain heritage in ancient India.", link: "ellora.html" },
+      { name: "Ajanta Caves",state: "Maharashtra", city: "Aurangabad", img: "", info: "Renowned for their exquisite ancient murals and Buddhist rock-cut architecture, the Ajanta Caves reflect the spiritual and artistic brilliance of ancient India.", link: "ajanta.html" }
     ];
 
     function displayCards(filter = "") {
